--- a/src/templates/service.yaml
+++ b/src/templates/service.yaml
@@ -12,6 +12,9 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
+      {{- if .Values.service.nodePort }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
   selector:
     {{- include "helpers.selectorLabels" . | nindent 4 }}
 {{- end }}
